--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 after_success:
   - docker build -t muharremkantar/multi-client ./client
   - docker build -t muharremkantar/multi-nginx ./nginx
-  - dokcer build -t muharremkantar/multi-server ./server
+  - docker build -t muharremkantar/multi-server ./server
   - docker build -t muharremkantar/multi-worker ./worker
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push muharremkantar/multi-client
